Projet_GL/src/test/deca/context/valid/unprovided/testObjet/methods/methodSelectionInExtClass.deca
// Description:
//   Définition d'une classe avec une méthode et manipulation dans le main
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    cree le 22/01/2018

class A {

      protected int x;

      void setX(int n){
                 x = n;
       }
}

class B{
      A aField;

      void SetAFieldX(int x){
      	  aField.setX(x);
      }
}